# Honeypot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  app.js  config.js.template  config.toml  docker-compose.yml  honeypot.db  package-lock.json  package.json
.github/workflows/: build.yml
data/: .gitkeep
deploy/: CADDY.md  Caddyfile  honeypot.service
etc/: mysql.db.schema.sql  nginx.conf.template
lib/: custom-ftp-file-system.js  custom-socket-server.js  helper.js  icmp-echo-logger.js  tcp-ports.js
src/: config.rs  events.rs  geoip.rs  main.rs
src/db/: mod.rs  schema.rs  write_buffer.rs
src/handlers/: ftp.rs  icmp.rs  mod.rs  ssh.rs  tcp.rs  telnet.rs
src/web/: middleware.rs  mod.rs  routes.rs  sse.rs
static/: app.js  base.js  custom.css  favico.min.js  index.html  map.js  robots.txt  stats.html  stats.js  style-stats.css  style.css  theme.js  utils.js
view/: index.html  stats.ejs
