[package]
name = "honeypot"
version = "0.1.0"
edition = "2021"
description = "A modern honeypot with real-time dashboard and attack visualization"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Hex encoding
hex = "0.4"

# GeoIP
maxminddb = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
bytes = "1"

# ICMP capture
pnet = "0.35"

[profile.release]
lto = true
codegen-units = 1
strip = true
